# Consultor-de-logs

./: README.md  pyproject.toml  requirements.txt
config/: config.yaml
docs/: example_usage.py
reports/: security_report_7Q8MsEEZ4k6Gd0gY_20250712_093954.html  security_report_7Q8MsEEZ4k6Gd0gY_20250712_093954.json  security_report_OLTfLbJWhmv8hOAk_20250712_094113.html  security_report_muZCe1tVXTUMopDQ_20250712_093930.html  security_report_muZCe1tVXTUMopDQ_20250712_093930.json
src/consultor_logs/: __init__.py  main.py
src/consultor_logs/core/: __init__.py  analyzer.py  log_reader.py  reporter.py
src/consultor_logs/models/: __init__.py  events.py  reports.py
src/consultor_logs/utils/: __init__.py  config.py  helpers.py
templates/: security_report.html
tests/: __init__.py  test_analyzer.py  test_log_reader.py  test_models.py
